--- a/Home.html
+++ b/Home.html
@@ -25,12 +25,12 @@
             <img src="./Imagenes/libro.jpeg" width="8%" height="auto">
           </div>
         <nav class="top-nav">
-          <div class="linea_arriba"></div>
+          <!-- <div class="linea_arriba"></div> -->
           <ul>
-          <li> <a href="https://jornadasturismo.github.io/5JT2024/Home.html"> Inicio  </a> </li>
+          <li> <a href="https://jornadasturismo.github.io/5JT2024/Home.html"> Notas  </a> </li>
           <li> <a href="https://jornadasturismo.github.io/5JT2024/Ejercicios.html"> Ejercicios </a> </li>
           </ul>
-          <div class="linea_abajo"></div>
+          <!-- <div class="linea_abajo"></div> -->
           </nav>
         </header>
         
