--- a/Programa.html
+++ b/Programa.html
@@ -80,12 +80,12 @@
         <nav class="top-nav">
           <div class="linea_arriba"></div>
           <ul>
-          <li> <a href="https://jornadasturismo.github.io/5JT2024/Home.html"> Inicio  </a> </li>
-          <li> <a href="https://jornadasturismo.github.io/5JT2024/"> Acerca de</a></li>
-          <li> <a href="https://jornadasturismo.github.io/5JT2024/Registro.html" target="_blank"> Registro</a></li>
-          <li> <a href="https://jornadasturismo.github.io/5JT2024/Programa.html"> Programa </a> </li>
+          <li> <a href="https://pablojhh.github.io/MatematicasDOS/Home.html"> Inicio  </a> </li>
+          <li> <a href="https://pablojhh.github.io/MatematicasDOS/"> Acerca de</a></li>
+          <li> <a href="https://pablojhh.github.io/MatematicasDOS/Registro.html" target="_blank"> Registro</a></li>
+          <li> <a href="https://pablojhh.github.io/MatematicasDOS/Programa.html"> Programa </a> </li>
           <!-- <li> <a href="https://jornadasturismo.github.io/4JT2023/Ponentes.html"> Memorias </a> </li> -->
-          <li> <a href="https://jornadasturismo.github.io/5JT2024/"> Memorias </a> </li> 
+          <li> <a href="https://pablojhh.github.io/MatematicasDOS/"> Memorias </a> </li> 
           </ul>
           <div class="linea_abajo"></div>
           </nav>
