--- a/Ejercicios/EP1.html
+++ b/Ejercicios/EP1.html
@@ -84,7 +84,7 @@
 
 
 
-  <body class="fondo-body" ><h1 class="page-title-practica"> Ejercicios propuestos de Teoría de Conjuntos</h1>   
+  <body class="fondo-body" ><h1 class="page-title-practica"> Ejercicios. propiedades de los números reales</h1>   
     <div class="nota-box"><h1 class="number-title-practica"> Ejercicio</h1>
 
        <p>Sean $x,y,z \in \mathbb{R}$. Establezca cual o cuales axiomas de los números reales  justifican cada una de las 
@@ -113,6 +113,7 @@
         </ol>     
     </div>
 
+<!--     
     <div class="nota-box">
       <h1 class="number-title-practica"> Ejercicio</h1>
 <p>Simplifique cada una de las siguientes expresiones:</p>
@@ -294,5 +295,5 @@
   </div>
 
 
- 
+  -->
 </body>
