--- a/Ejercicios.html
+++ b/Ejercicios.html
@@ -63,7 +63,7 @@
 
       <div class="links-box" style = "font-family: 'Oldenburg', cursive;">
           
-       <a  href="https://pjhh-ciencias.github.io/CPMatematicas/Ejercicios/EP1.html"> Propiedades de los números reales</a>
+       <a  href="https://pablojhh.github.io/MatematicasDOS/Ejercicios/EP1.html"> Propiedades de los números reales</a>
        <!-- <a  href="https://pjhh-ciencias.github.io/CPMatematicas/Ejercicios/EP2.html"> Ejercicios propuestos de Álgebra</a>
        <a  href="https://pjhh-ciencias.github.io/CPMatematicas/Ejercicios/EP3.html"> Ejercicios propuestos</a> -->
        
