--- a/Ejercicios/EP1.html
+++ b/Ejercicios/EP1.html
@@ -67,7 +67,7 @@
         <nav class="top-nav">
           <!-- <div class="linea_arriba"></div> -->
           <ul>
-          <li> <a href="https://pablojhh.github.io/MatematicasDOS/Home.html"> Inicio  </a> </li>
+          <li> <a href="https://pablojhh.github.io/MatematicasDOS/Notas.html"> INotas  </a> </li>
           <li> <a href="https://pablojhh.github.io/MatematicasDOS/Ejercicios.html"> Ejercicios </a> </li>
           </ul>
           <!-- <div class="linea_abajo"></div> -->
