--- a/Notas.html
+++ b/Notas.html
@@ -40,7 +40,7 @@
     <nav class="top-nav">
       <!-- <div class="linea_arriba"></div> -->
       <ul>
-      <li> <a href="https://pablojhh.github.io/MatematicasDOS/Home.html"> Inicio  </a> </li>
+      <li> <a href="https://pablojhh.github.io/MatematicasDOS/Notas.html"> Notas  </a> </li>
       <!-- <li> <a href="https://pablojhh.github.io/MatematicasDOS/"> Acerca de</a></li> -->
       <!-- <li> <a href="https://pablojhh.github.io/MatematicasDOS/Registro.html" target="_blank"> Registro</a></li> -->
       <li> <a href="https://pablojhh.github.io/MatematicasDOS/Ejercicios.html"> Ejercicios </a> </li>
