--- a/Ejercicios/EP1.html
+++ b/Ejercicios/EP1.html
@@ -47,7 +47,7 @@
         counter-reset: sectionCounter 1 subsectioncounter ;
       } */
       h1.page-title-practica{
-        counter-reset: semanaCounter 3 sectionCounter  subsectionCounter;
+        counter-reset: semanaCounter 1 sectionCounter  subsectionCounter;
       }
     </style>
 
@@ -67,7 +67,7 @@
         <nav class="top-nav">
           <!-- <div class="linea_arriba"></div> -->
           <ul>
-          <li> <a href="https://pablojhh.github.io/MatematicasDOS/Notas.html"> INotas  </a> </li>
+          <li> <a href="https://pablojhh.github.io/MatematicasDOS/Notas.html"> Notas  </a> </li>
           <li> <a href="https://pablojhh.github.io/MatematicasDOS/Ejercicios.html"> Ejercicios </a> </li>
           </ul>
           <!-- <div class="linea_abajo"></div> -->
