--- a/Notas.html
+++ b/Notas.html
@@ -62,7 +62,7 @@
       
       <!-- <div class="nota-box"> -->
         <div style="text-align: center;">
-        <iframe src="./Archivos/Notas09julio2024.pdf" width="95%" height="100% allowfullscreen">
+        <iframe src="./Archivos/Notas.pdf" width="95%" height="100% allowfullscreen">
 
         </iframe>
       </div>
