--- a/Ejercicios/EP1.html
+++ b/Ejercicios/EP1.html
@@ -84,7 +84,7 @@
 
 
 
-  <body class="fondo-body" ><h1 class="page-title-practica"> Ejercicios. propiedades de los números reales</h1>   
+  <body class="fondo-body" ><h1 class="page-title-practica"> Ejercicios. Propiedades de los números reales</h1>   
     <div class="nota-box"><h1 class="number-title-practica"> Ejercicio</h1>
 
        <p>Sean $x,y,z \in \mathbb{R}$. Establezca cual o cuales axiomas de los números reales  justifican cada una de las 
