--- a/Home.html
+++ b/Home.html
@@ -1,4 +1,6 @@
 
+<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title></title><meta http-equiv="refresh" content="0;url= Notas.html" /></head><body></body></html>
+
 <!DOCTYPE html PUBLIC >
 
 <html lang="es">
@@ -27,7 +29,7 @@
         <nav class="top-nav">
           <!-- <div class="linea_arriba"></div> -->
           <ul>
-          <li> <a href="https://pablojhh.github.io/MatematicasDOS/Home.html"> Notas  </a> </li>
+          <li> <a href="https://pablojhh.github.io/MatematicasDOS/Notas.html"> Notas  </a> </li>
           <li> <a href="https://pablojhh.github.io/MatematicasDOS//Ejercicios.html"> Ejercicios </a> </li>
           </ul>
           <!-- <div class="linea_abajo"></div> -->
