--- a/Ejercicios/EP1.html
+++ b/Ejercicios/EP1.html
@@ -85,6 +85,7 @@
 
 
   <body class="fondo-body" ><h1 class="page-title-practica"> Ejercicios. Propiedades de los números reales</h1>   
+
     <div class="nota-box"><h1 class="number-title-practica"> Ejercicio</h1>
 
        <p>Sean $x,y,z \in \mathbb{R}$. Establezca cual o cuales axiomas de los números reales  justifican cada una de las 
@@ -113,7 +114,35 @@
         </ol>     
     </div>
 
-<!--     
+    <div class="nota-box"><h1 class="number-title-practica"> Ejercicio</h1>  
+      <p>Reescriba la expresión usando la propiedad de los números reales.</p>
+      <ol>
+        <li>Propiedad conmutativa para la suma, $x+3 = $</li>
+        <li>Propiedad asociativa para la multiplicación, $7(xy)=$</li>
+        <li>Propiedad distributiva, $4(a+b)=$</li>
+        <li>Propiedad distributiva, $5x + 5y = $</li>
+      </ol>
+    </div>
+
+    <div class="nota-box"><h1 class="number-title-practica"> Ejercicio</h1>  
+      <p>Utiliza propiedades de los números reales para escribir la expresión sin parentesis</p>
+      <ol class="two-column">
+        <li>$3(x+y)$</li>
+        <li>$4(2m)$</li>
+        <li>$\frac{4}{2}(2x-4y)$</li>
+        <li>$(a-b)8$</li>
+        <li>$\frac{4}{3}(-6x)$</li>
+        <li>$-\frac{1}{2}(4x-2y)$</li>
+        <li>$3a(b+c-2d)$</li>
+        <!-- <li>$$</li>
+        <li>$$</li>
+        <li>$$</li> -->
+      </ol>
+    </div>
+
+
+
+
     <div class="nota-box">
       <h1 class="number-title-practica"> Ejercicio</h1>
 <p>Simplifique cada una de las siguientes expresiones:</p>
@@ -177,7 +206,7 @@
   </ol>
   </div>
 
-
+<!--     
 
   <div class="nota-box">
     <h1 class="number-title-practica"> Ejercicio</h1>
