--- a/Ejercicios/EP1.html
+++ b/Ejercicios/EP1.html
@@ -127,13 +127,13 @@
     <div class="nota-box"><h1 class="number-title-practica"> Ejercicio</h1>  
       <p>Utiliza propiedades de los números reales para escribir la expresión sin parentesis</p>
       <ol class="two-column">
-        <li>$3(x+y)$</li>
-        <li>$4(2m)$</li>
-        <li>$\frac{4}{2}(2x-4y)$</li>
-        <li>$(a-b)8$</li>
-        <li>$\frac{4}{3}(-6x)$</li>
-        <li>$-\frac{1}{2}(4x-2y)$</li>
-        <li>$3a(b+c-2d)$</li>
+        <li>$3(x+y)$</li><br>
+        <li>$4(2m)$</li><br>
+        <li>$\frac{4}{2}(2x-4y)$</li><br>
+        <li>$(a-b)8$</li><br>
+        <li>$\frac{4}{3}(-6x)$</li><br>
+        <li>$-\frac{1}{2}(4x-2y)$</li><br>
+        <li>$3a(b+c-2d)$</li><br>
         <!-- <li>$$</li>
         <li>$$</li>
         <li>$$</li> -->
