--- a/Ejercicios/EP1.html
+++ b/Ejercicios/EP1.html
@@ -117,9 +117,9 @@
     <div class="nota-box"><h1 class="number-title-practica"> Ejercicio</h1>  
       <p>Reescriba la expresión usando la propiedad de los números reales.</p>
       <ol>
-        <li>Propiedad conmutativa para la suma, $x+3 = $</li>
-        <li>Propiedad asociativa para la multiplicación, $7(xy)=$</li>
-        <li>Propiedad distributiva, $4(a+b)=$</li>
+        <li>Propiedad conmutativa para la suma, $x+3 = $</li><br>
+        <li>Propiedad asociativa para la multiplicación, $7(xy)=$</li><br>
+        <li>Propiedad distributiva, $4(a+b)=$</li><br>
         <li>Propiedad distributiva, $5x + 5y = $</li>
       </ol>
     </div>
@@ -133,7 +133,7 @@
         <li>$(a-b)8$</li><br>
         <li>$\frac{4}{3}(-6x)$</li><br>
         <li>$-\frac{1}{2}(4x-2y)$</li><br>
-        <li>$3a(b+c-2d)$</li><br>
+        <li>$3a(b+c-2d)$</li>
         <!-- <li>$$</li>
         <li>$$</li>
         <li>$$</li> -->
