--- a/Ejercicios/EP1.html
+++ b/Ejercicios/EP1.html
@@ -129,9 +129,9 @@
       <ol class="two-column">
         <li>$3(x+y)$</li><br>
         <li>$4(2m)$</li><br>
-        <li>$\frac{4}{2}(2x-4y)$</li><br>
+        <li>$\displaystyle{\frac{4}{2}}(2x-4y)$</li><br>
         <li>$(a-b)8$</li><br>
-        <li>$\frac{4}{3}(-6x)$</li><br>
+        <li>$\displaystyle{\frac{4}{3}}(-6x)$</li><br>
         <li>$-\frac{1}{2}(4x-2y)$</li><br>
         <li>$3a(b+c-2d)$</li>
         <!-- <li>$$</li>
