--- a/Ejercicios/EP1.html
+++ b/Ejercicios/EP1.html
@@ -186,6 +186,23 @@
 </div>
 
 
+  <div class="nota-box"><h1 class="number-title-practica"> Ejercicio</h1>
+    <p>Escriba cada enunciado en términos de desigualdades.</p>
+    <ol class="three-column">
+      <li>$x$ es positivo</li><br>
+      <li>$t$ es menor a $4$</li><br>
+      <li>$a$ es mayor o igual a $\pi$</li><br>
+      <!-- <li>$x$ es menor a $13$ y mayor a $5$</li><br> -->
+      <!-- <li>La distancia de $p$ a $3$ es como máximo $5$ y es negativa</li><br> -->
+      <li>$z$ es mayor a $1$</li><br>
+      <li>$b$ es como máximo $8$</li><br>
+      <li>$5$ es menor o igual que $x$</li>
+      <!-- <li>$w$ es positiva y menor o igual a $17$</li><br> -->
+      <!-- <li>$y$ está al menos $2$ unidades de $\pi$</li><br> -->
+
+    </ol>
+    
+  </div>
 
   <div class="nota-box">
     <h1 class="number-title-practica"> Ejercicio</h1>
