--- a/Ejercicios/EP1.html
+++ b/Ejercicios/EP1.html
@@ -203,9 +203,22 @@
     </ol>
     
   </div>
+  
 
-  <div class="nota-box">
-    <h1 class="number-title-practica"> Ejercicio</h1>
+  <div class="nota-box"><h1 class="number-title-practica"> Ejercicio</h1>
+    <p>Compara las siguientes cantidades y coloca los símbolos: $>, <$ o $=$, según corresponda.</p>
+    <ol class="two-column">
+      <li>$-7  \,\rule[-0pt]{0.8cm}{0.5pt}\, -8$</li><br>
+      <li>$-35 \,\rule[-0pt]{0.8cm}{0.5pt}\, 32$</li><br>
+      <li>$-844.5 \, \,\rule[-0pt]{0.8cm}{0.5pt}\,0$</li><br>
+      <li>$-483\, \rule[-0pt]{0.8cm}{0.5pt}\, -480$</li><br>
+      <li>$\displaystyle \frac{8}{4} \,\rule[-0pt]{0.8cm}{0.5pt}\, 2$</li><br>
+      <li>$-\displaystyle\frac{7}{3}  \,\rule[-0pt]{0.8cm}{0.5pt}\,1.5$</li><br>
+    </ol>
+  </div>
+
+
+  <div class="nota-box"><h1 class="number-title-practica"> Ejercicio</h1>
   Si $x$ es positivo y $y$ es negativo, determine el signo del número real: 
   <ol class="four-column">
     <li>$10x$</li><br>
