--- a/Ejercicios/EP1.html
+++ b/Ejercicios/EP1.html
@@ -199,7 +199,7 @@
   <div class="nota-box">
     <h1 class="number-title-practica"> Ejercicio</h1>
 <p>Simplifique cada una de las siguientes expresiones:</p>
-<ol class="three-column">
+<ol class="two-column">
 <li>$-2+ (-4)$</li><br>
 <li>$-6 + 2$</li><br>
 <li>$6 + (-4)$</li><br>
