--- a/Ejercicios/EP1.html
+++ b/Ejercicios/EP1.html
@@ -178,7 +178,7 @@
 
   <div class="nota-box"><h1 class="number-title-practica"> Ejercicio</h1>
   Si $x$ es positivo y $y$ es negativo, determine el signo del número real: 
-  <ol class="four-column">
+  <ol class="two-column">
     <li>$10x$</li><br>
     <li>$-x$</li><br>
     <li>$-y$</li><br>
