--- a/Ejercicios/EP1.html
+++ b/Ejercicios/EP1.html
@@ -353,5 +353,17 @@
   </ol>
   </div>
 
+  <div class="nota-box"> <h1 class="number-title"> Ejercicio</h1>
+    <p>Indica si las siguientes fracciones son equivalentes:</p>
+    <ol class="three-column">
+      <li>$\displaystyle{\frac{2}{5}, \frac{6}{15} }$</li><br>
+      <li>$\displaystyle{\frac{3}{8}, \frac{48}{17} }$</li><br>
+      <li>$\displaystyle{\frac{1}{6}, \frac{12}{72} }$</li><br>
+      <li>$\displaystyle{\frac{4}{9}, \frac{28}{72} }$</li><br>
+      <li>$\displaystyle{\frac{18}{24}, \frac{6}{8} }$</li><br>
+      <li>$\displaystyle{\frac{80}{15}, \frac{18}{3} }$</li><br>
+    </ol>
+  </div>
+
 
 </body>
