--- a/Ejercicios/EP1.html
+++ b/Ejercicios/EP1.html
@@ -365,5 +365,35 @@
     </ol>
   </div>
 
+  <div class="nota-box"><h1 class="number-title"> Ejercicio</h1>
+    <p>Compare las siguientes parejas de números mediante la relación de orden mediante 
+      alguna de las relaciones de orden: $>, <, \geq,  \leq$ 
+    </p>
+
+    <p>
+    <ol class="three-column">
+      <li>$15,3$</li><br>
+      <li>$-9,0$</li><br>
+      <li>$\displaystyle{-\frac{1}{2}, -1}$</li><br>
+      <li>$-6,-10$</li><br>
+      <li>$\displaystyle{\frac{10}{2}, \frac{12}{13}}$</li><br>
+      <li>$\displaystyle{\frac{2}{3}, 0.67}$</li><br>
+      <li>$\displaystyle{\frac{4}{3}, 1.33}$</li><br>
+      <li>$\displaystyle{\frac{2}{3}, -0.67}$</li><br>
+      <li>$-2,-7$</li><br>
+      <li>$\displaystyle{-\frac{1}{7}, -0.143}$</li><br>
+      <li>$\displaystyle{-\frac{7}{15}, -\frac{5}{11}}$</li><br>
+      <li>$-\pi, -3$</li><br>
+      <li>$\pi, 3.14$</li><br>
+      <li>$8, 9$</li><br>
+      <li>$\pi, \displaystyle{\frac{5 \pi}{5}} $</li><br>
+      <li>$2.5, \displaystyle{-\frac{5}{2}}$</li><br>
+      <li>$\displaystyle{-3,- \frac{7}{2}}$</li><br>
+      <li>$0.333, \displaystyle{\frac{1}{3}}$</li><br>
+      <!-- <li>$\displaystyle{\frac{7}{2},3.4}$</li><br> -->
+    </ol>
+  </p>
+  </div>
+
 
 </body>
