--- a/Ejercicios/EP1.html
+++ b/Ejercicios/EP1.html
@@ -306,12 +306,12 @@
     <h1 class="number-title-practica"> Ejercicio</h1>
   <p>Realice las siguientes operaciones:</p>
   <p>
-    <ol class="three-column">
+    <ol class="two-column">
       <li>$\displaystyle{\frac{1}{3}+ \frac{5}{3}}$</li><br>
       <li>$\displaystyle{\frac{3}{8}+ \frac{1}{8}}$</li><br>
       <li>$\displaystyle{\frac{4}{9}+ \frac{5}{9}+ \frac{2}{9}}$</li><br>
       <li>$\displaystyle{\frac{7}{6}+ \frac{5}{6} + \frac{1}{6}}$</li><br>
-      <li>$\displaystyle{\frac{3}{7}+ \frac{2}{7} \frac{6}{7}}$</li><br>
+      <li>$\displaystyle{\frac{3}{7}+ \frac{2}{7}\cdot \frac{6}{7}}$</li><br>
       <li>$\displaystyle{\frac{1}{2}+ \frac{1}{3}}$</li><br>
       <li>$\displaystyle{\frac{2}{3}+ \frac{5}{6}}$</li><br>
       <li>$\displaystyle{\frac{5}{10}+ \frac{3}{2}}$</li><br>
@@ -332,6 +332,7 @@
       <li>$\displaystyle{\frac{7}{8} \div \frac{21}{16}}$</li><br>
       <li>$\displaystyle{\frac{4}{3} \div \frac{5}{30}}$</li><br>
       <li>$\displaystyle{\frac{28}{7} \div \frac{4}{5}}$</li><br>
+      <li>$\displaystyle{\frac{1}{2} \div 2}$</li>
     </ol>
   </p>
   </div>
@@ -365,35 +366,288 @@
     </ol>
   </div>
 
+
+  
+
   <div class="nota-box"><h1 class="number-title"> Ejercicio</h1>
     <p>Compare las siguientes parejas de números mediante la relación de orden mediante 
       alguna de las relaciones de orden: $>, <, \geq,  \leq$ 
     </p>
 
     <p>
-    <ol class="three-column">
-      <li>$15,3$</li><br>
-      <li>$-9,0$</li><br>
-      <li>$\displaystyle{-\frac{1}{2}, -1}$</li><br>
-      <li>$-6,-10$</li><br>
-      <li>$\displaystyle{\frac{10}{2}, \frac{12}{13}}$</li><br>
-      <li>$\displaystyle{\frac{2}{3}, 0.67}$</li><br>
-      <li>$\displaystyle{\frac{4}{3}, 1.33}$</li><br>
-      <li>$\displaystyle{\frac{2}{3}, -0.67}$</li><br>
-      <li>$-2,-7$</li><br>
-      <li>$\displaystyle{-\frac{1}{7}, -0.143}$</li><br>
-      <li>$\displaystyle{-\frac{7}{15}, -\frac{5}{11}}$</li><br>
-      <li>$-\pi, -3$</li><br>
-      <li>$\pi, 3.14$</li><br>
-      <li>$8, 9$</li><br>
-      <li>$\pi, \displaystyle{\frac{5 \pi}{5}} $</li><br>
-      <li>$2.5, \displaystyle{-\frac{5}{2}}$</li><br>
-      <li>$\displaystyle{-3,- \frac{7}{2}}$</li><br>
-      <li>$0.333, \displaystyle{\frac{1}{3}}$</li><br>
-      <!-- <li>$\displaystyle{\frac{7}{2},3.4}$</li><br> -->
+    <ol class="two-column">
+      <li> $120000 \,\rule[-0pt]{0.8cm}{0.5pt}\, 12000$</li><br>
+      <li> $-1000000 \,\rule[-0pt]{0.8cm}{0.5pt}\, -100000$</li><br>
+      <li> $-\displaystyle{\frac{7}{3}} \,\rule[-0pt]{0.8cm}{0.5pt}\, 1.5$</li><br>
+      <li> $-\displaystyle{\frac{1273}{9}}\,\rule[-0pt]{0.8cm}{0.5pt}\, 0.5$</li>
+      <li>$15\,\rule[-0pt]{0.8cm}{0.5pt}\,3$</li><br>
+      <li>$-9\,\rule[-0pt]{0.8cm}{0.5pt}\,0$</li><br>
+      <li>$\displaystyle{-\frac{1}{2}\,\rule[-0pt]{0.8cm}{0.5pt}\, -1}$</li><br>
+      <li>$-6\,\rule[-0pt]{0.8cm}{0.5pt}\,-10$</li><br>
+      <li>$\displaystyle{\frac{10}{2}\,\rule[-0pt]{0.8cm}{0.5pt}\, \frac{12}{13}}$</li><br>
+      <li>$\displaystyle{\frac{2}{3}\,\rule[-0pt]{0.8cm}{0.5pt}\, 0.67}$</li><br>
+      <li>$\displaystyle{\frac{4}{3}\,\rule[-0pt]{0.8cm}{0.5pt}\, 1.33}$</li><br>
+      <li>$\displaystyle{\frac{2}{3}\,\rule[-0pt]{0.8cm}{0.5pt}\, -0.67}$</li><br>
+      <li>$-2\,\rule[-0pt]{0.8cm}{0.5pt}\,-7$</li><br>
+      <li>$\displaystyle{-\frac{1}{7}\,\rule[-0pt]{0.8cm}{0.5pt}\, -0.143}$</li><br>
+      <li>$\displaystyle{-\frac{7}{15}\,\rule[-0pt]{0.8cm}{0.5pt}\, -\frac{5}{11}}$</li><br>
+      <li>$-\pi\,\rule[-0pt]{0.8cm}{0.5pt}\, -3$</li><br>
+      <li>$\pi\,\rule[-0pt]{0.8cm}{0.5pt}\, 3.14$</li><br>
+      <li>$8\,\rule[-0pt]{0.8cm}{0.5pt}\, 9$</li><br>
+      <li>$\pi\,\rule[-0pt]{0.8cm}{0.5pt}\, \displaystyle{\frac{5 \pi}{5}} $</li><br>
+      <li>$2.5\,\rule[-0pt]{0.8cm}{0.5pt}\, \displaystyle{-\frac{5}{2}}$</li><br>
+      <li>$\displaystyle{-3\,\rule[-0pt]{0.8cm}{0.5pt}\,- \frac{7}{2}}$</li><br>
+      <li>$0.333\,\rule[-0pt]{0.8cm}{0.5pt}\, \displaystyle{\frac{1}{3}}$</li><br>
+      <!-- <li>$\displaystyle{\frac{7}{2}\,\rule[-0pt]{0.8cm}{0.5pt}\,3.4}$</li><br> -->
     </ol>
   </p>
   </div>
 
+  <div class="nota-box">
+    <h1 class="number-title-practica">Ejercicio</h1>
+    <p>Realiza las siguientes operaciones respetando la jerarquía de operaciones:</p>
+    <ol>
+        <li> $7 \times 2 + 8 \div 4 - 3 \times 2$</li><br>
+        <li> $12 \div 4 \times 3 + 18 \div 9 \times 3 - 4 \times 3$</li><br>
+        <li> $(10 - 2) \div 2 \times 3 + (8 + 6)(7 - 2) - 12 \times 2 \div 8$</li><br>
+        <li> $(6 + 2) \times (7 - 4) \div (14 - 2) + (12 - 8) \times (7 + 3) \div (10 - 2)$</li><br>
+        <li> $12^2 \div \sqrt{16} \div \sqrt{81} + 5^2 \times 6 \div 3$</li><br>
+        <li> $\sqrt{13^2 - 12^2} + (6 - 4)^2 \times 8 - \sqrt{(10 - 8)^2}$</li><br>
+        <li> $2 + \{8 \times (8 - 6) + [(3 + 4) \div 7 - 5 \times 6 \div 10 - 5]\}$</li><br>
+    </ol>
+</div>
 
+
+  <div class="nota-box"><h1 class="number-title">Ejercicio</h1>
+    <p>Simplifica cada una de las siguientes expresiones:</p>
+    <ol class="two-column">
+    <li>$(-4)^2$</li><br>
+    <li>$-5^3$</li><br>
+    <li>$(2)^{-5}$</li><br>
+    <li>$(-1)^8$</li><br>
+    <li>$(-3)^3$</li><br>
+    <li>$(-1)^10$</li><br>
+    <li>$(-3)^4$</li><br>
+    <li>$-2^{-5}$</li><br>
+    <li>$\left( \displaystyle{\frac{1}{2}}\right)^{-2}$</li><br>
+    <li>$\left( \displaystyle{-\frac{1}{4}}\right)^{4}$</li><br>
+    <li>$\left( \displaystyle{\frac{1}{3}}\right)^{3}$</li><br>
+    <li>$\left( \displaystyle{-\frac{2}{5}}\right)^{-3}$</li><br>
+    <li>$\left( \displaystyle{\frac{7}{3}}\right)^{2}$</li><br>
+    <li>$\left( \displaystyle{\frac{5}{9}}\right)^{3}$</li><br>
+    <li>$-(-1 + 3)^2$</li><br>
+    <li>$(3-1)^2$</li><br>
+    <li>$(5+11)^2$</li><br>
+    <li>$\left( \displaystyle{\frac{1}{2}+ \frac{2}{3}}\right)^{3}$</li><br>
+    <li>$\left( \displaystyle{5 + \frac{1}{4}}\right)^{2}$</li><br>
+    <li>$\left( \displaystyle{\frac{1}{10}} + 1\right)^{3}$</li><br>
+    <li>$3^2\cdot 3^{-3}\cdot 3^{\frac{7}{3}}$</li><br>
+    <li>$\left(4^{\frac{3}{2}} \cdot 3^{\frac{1}{3}} \right) \left(2^{-1} \cdot 3^{-\frac{7}{3}} \right)$</li><br>
+    <li>$\left(2^7 \cdot 3^{-4} \right) \left( 2^{-5}\cdot 4^{4} \right)$</li><br>
+    <li>$\sqrt{16}$</li><br>
+    <li>$\sqrt{64}$</li><br>
+    <li>$\displaystyle{\sqrt{\displaystyle{\frac{4}{9}}}}$</li><br>
+    <li>$\sqrt[4]{9}$</li><br>
+    <li>$\sqrt[3]{-64}$</li><br>
+    <li>$\sqrt[5]{-32}$</li><br>
+    <li>$\sqrt[4]{256}$</li><br>
+    <li>$\sqrt[6]{\displaystyle{\frac{1}{64}}}$</li><br>
+    <li>$\sqrt{7} \cdot \sqrt{28}$</li><br>
+    <li>$\displaystyle{\frac{\sqrt{28}}{\sqrt{3}}}$</li><br>
+    <li>$\sqrt[4]{24} \cdot \sqrt[4]{54}$</li><br>
+    <li>$\left(\displaystyle{\frac{4}{9}} \right)^{-\frac{1}{2}}$</li><br>
+    <li>$(-32)^\frac{2}{5}$</li><br>
+    <li>$-32^\frac{2}{5}$</li><br>
+    <li>$\left(\displaystyle{-\frac{27}{8}} \right)^{\frac{2}{3}}$</li><br>
+    <li>$\left(\displaystyle{\frac{25}{64}} \right)^{-\frac{3}{2}}$</li><br>
+    <li>$\displaystyle{\frac{6^7}{6^4}}$</li><br>
+    <li>$\displaystyle{\frac{5^8}{5^{10}}}$</li><br>
+    <li>$\displaystyle{\frac{3^{-6}}{3^{-10}}}$</li><br>
+    <li>$\displaystyle{\frac{5^{100}}{5^{100}}}$</li><br>
+    <li>$\displaystyle{\frac{2^7\cdot 3^{-5}}{2^{5} \cdot 3^{-4}}}$</li><br>
+    <li>$\displaystyle{\frac{3^5\cdot 4^{-6}}{3^{7} \cdot 4^{-8}}}$</li><br>
+    <li>$\displaystyle{\frac{7^5\cdot 3^{3}}{7^{3} \cdot 3^{5}}}$</li><br>
+    <li>$\displaystyle{ \frac{2^{\frac{1}{4}} \cdot 5^{-\frac{3}{2}} }{2^{-\frac{7}{4}}\cdot 5^{-\frac{5}{2}}} }$</li><br>
+    <li>$\displaystyle{ \frac{ 2^{-\frac{1}{3}} \cdot 3^{\frac{3}{4}} \cdot 4^{2}}{2^{\frac{5}{2}} \cdot 3^{-\frac{1}{4}} \cdot 4^{\frac{3}{2}}}}$</li><br>
+    <li>$\displaystyle{ \frac{ 4^{-\frac{1}{6}} \cdot 9^{\frac{3}{8}} \cdot 6^{-3}}{4^{\frac{5}{6}} \cdot 9^{-\frac{5}{8}} \cdot 6^{-3}}}$</li><br>
+    <li>$\displaystyle{ \frac{8^4}{4^4}}$</li><br>
+    <li>$\displaystyle{ \frac{12^3 \cdot 3^{3}}{ 6^{3} \cdot 2^{2}} }$</li><br>
+    <li>$\left((-5)^2 \right)^3$</li><br>
+    <li>$\left(-5^2 \right)^3$</li><br>
+    <li>$\left(4^{\frac{1}{3}} \right)^6$</li><br>
+    <li>$\left( 5^{-\frac{1}{5}} \right)^{-10}$</li><br>
+    <li>$\left(\displaystyle{\frac{2^2 \cdot 3^5 \cdot 4^2}{2^4 \cdot 3^2}}\right)^2$</li><br>
+    <li>$\left[\left(\displaystyle{\frac{1}{4}}\right)^2 \right]^4$</li><br>
+    <li>$\left[\left(\displaystyle{\frac{1}{2}}\right)^2 \right]^3$</li><br>
+    <li>$\left[\left(\displaystyle{\frac{3}{4}}\right)^4 \right]^{-\frac{1}{2}}$</li><br>
+    <li>$\left(\displaystyle{\frac{\frac{3}{5}}{\frac{5}{5}}}\right)^2$</li><br>
+    <li>$\left( \displaystyle{- \frac{1}{3^{-3}} }\right)^{-2}$</li><br>
+    <li>$\left(\displaystyle{ \frac{1}{2^{-3}} - \frac{1}{2^{-1}}   } \right)^{-3}$</li><br>
+  </ol>
+    </div>
+
+
+  <div class="nota-box"><h1 class="number-title"> Ejercicio</h1>
+      <p>Simplifique cada una de las siguientes expresiones:</p>
+    <ol class="two-column">
+    <li>$\sqrt{49}$</li><br>
+    <li>$\sqrt{729}$</li><br>
+    <li>$\sqrt{289}$</li><br>
+    <li>$\sqrt[3]{-512}$</li><br>
+    <li>$\sqrt[4]{81}$</li><br>
+    <li>$\sqrt[4]{625}$</li><br>
+    <li>$\sqrt{196}$</li><br>
+    <li>$\sqrt[3]{216}$</li><br>
+    <li>$\sqrt{2^2\cdot 3^2}$</li><br>
+    <li>$\sqrt{32}+\sqrt{18}$</li><br>
+    <li>$\sqrt{75}+\sqrt{48}$</li><br>
+    <li>$\sqrt[5]{18} + \sqrt[5]{3}$</li><br>
+    <li>$\sqrt[4]{48} - \sqrt[4]{3}$</li><br>  
+    <li>$\sqrt{16x} + \sqrt{x^5}$</li> <br> 
+    <li>$\sqrt[3]{2y^4} - \sqrt[3]{y}$</li><br>    
+    </ol>
+    </div>
+
+
+    <div class="nota-box"><h1 class="number-title"> Ejercicio</h1>
+    <p>Simplifique cada expresión</p>
+    <ol class="two-column">
+        <li>$(3y^2)(4y^5)$</li><br>
+        <li>$x^{-5} x^3$</li><br>
+        <li>$x^2 x^{-6}$</li><br>
+        <li>$w^{-2}w^{-1} w^{6}$</li><br>
+        <li>$z^{5}z^{-3} z^{-4}$</li><br>
+        <li>$\displaystyle{\frac{y^{10} y^0}{y^7}}$</li><br>
+        <li>$\displaystyle{x^6}{x^{10}}$</li><br>
+        <li>$\displaystyle{\frac{a^9 a^{-2}}{a}}$</li><br>
+        <li>$\displaystyle{\frac{z^2z^4}{z^3z^{-1}}}$</li><br>
+        <li>$(2y^2)^3$</li><br>
+        <li>$(8x)^2$</li><br>
+        <li>$(a^2 a^4)^3$</li><br>
+        <li>$x^8 x^2$</li><br>
+        <li>$\displaystyle{\frac{a^2}{4}}^3$</li><br>
+        <li>$(3z)^2 (6z)^{-3}$</li><br>
+        <li>$(2z^2)^{-5}z^10$</li><br>
+        <li>$(2a^3 a^2)^4$</li><br>
+        <li>$\displaystyle{\frac{3x^4}{4x^2}}^2$</li><br> 
+    </ol>
+    </div>
+
+
+    <div class="nota-box"><h1 class="number-title"> Ejercicio</h1>
+    <p>Simplifique cada una de las siguientes expresiones:</p>
+    <ol class="two-column">
+    <li>$(4x^2y^2)(2x^5 y)$</li><br>
+    <li>$(8a^2z)\left(\displaystyle{\frac{1}{2} a^3 z^4}\right)$</li><br>
+    <li>$b^4(3 a b^3 ) (2a^2 b^{-5}) $</li><br>
+    <li>$(2s^3 t^{-2})\left(\displaystyle{\frac{1}{4}} s^7 t \right) ( 16 t^4)$</li><br>
+    <li>$(5 x^2 y^3) (3 x^2 y^5)^4$</li><br>
+    <li>$(2 a^3 b2 ) ( 5 a^2 b^5)^3$</li><br>
+    <li>$(s^{-2}  t^2) (s^2 t )^3$</li><br>
+    <li>$(2 u^2 v^3)^3 ( 3 u^{-3} v )^2 $</li><br>
+    <li>$\displaystyle{\frac{6y^3 z}{2y z^2}}$</li><br>
+    <li>$\displaystyle{\frac{(xy^2z^3)^4}{(x^2y^2 z)^3}}$</li><br>
+    <li>$\displaystyle{\frac{2x^3y^4}{x^5y^3}}$</li><br>
+    <li>$\displaystyle{\frac{(2v^3 w)^2}{v^3 w^2}}$</li><br>
+    <li>$\displaystyle{\left(\frac{a^2}{b}\right)^5 \left( \frac{a^3b^2}{c^3}\right)^3}$</li><br>
+    <li>$\displaystyle{\frac{2x^3y^4}{x^5 y^3}}$</li><br>
+    <li>$\displaystyle{\frac{(2v^3 w)^2}{v^3 w^2}}$</li><br>
+    <li>$\displaystyle{\left(\frac{a^2}{b}\right)^5 \left( \frac{a^3 b^2}{c^3}\right)^3}$</li><br>
+    <li>$\displaystyle{\frac{(u^{-1}v^2)^3}{(u^{3}v^{-2})^2}}$</li><br>
+    <li>$\displaystyle{\frac{(rs^2)^3}{(r^{-3}s^2)^3}}$</li><br>
+    <li>$\displaystyle{\frac{8a^3b^{-4}}{2a^{-5} b^5}}$</li><br>
+    <li>$\left(\displaystyle{\frac{y}{5x^{-2}}}\right)^{-3}$</li><br>
+    <li>$\left(\displaystyle{\frac{5xy^{-2}}{x^{-1} y^{-3}}} \right)$</li><br>
+    <li>$\left(\displaystyle{\frac{2a^{-1} b}{a^2 b^{-3}}}\right)^{-3}$</li><br>
+    <li>$\left( \displaystyle{ \frac{3a}{b^3}} \right)^{-1}$</li><br>
+    <li>$\left(\displaystyle{\frac{q^{-1} r^{-1} s^{-2}}{r^{-5} s  q^{-8}}} \right)^{-1}$</li><br>
+    <li>$\displaystyle{\frac{s^{2} t^{-4}}{5 s^{-1} t}}$</li><br>
+    <li>$\left( \displaystyle{\frac{xy^{-2} z^{-3}}{x^2 y^{3} z^{-4}}} \right)^{-3}$  </li>
+    </ol>
+    </div>
+
+
+    <div class="nota-box"><h1 class="number-title"> Ejercicio</h1>
+    <p>Simplifique cada una de las siguientes expresiones. Suponga que las letras denotan cualesquiera numeros reales positivos.</p>
+  <ol class="two-column">
+    <li>$\sqrt[4]{x^4}$</li><br>
+    <li>$\sqrt[4]{16x^8}$</li><br>
+    <li>$\sqrt[6]{64a^6 b^7}$</li><br>
+    <li>$\sqrt[3]{\sqrt{64x^6}}$</li><br>
+    <li>$\sqrt[5]{x^10}$</li><br>
+    <li>$\sqrt[3]{x^3 y^6}$</li><br>
+    <li>$\sqrt[3]{a^2 b} \sqrt[3]{64a^4b}$</li><br>
+    <li>$\sqrt[4]{x^4 y^2 z^2}$</li><br>
+    <!-- <li>$$</li><br>
+    <li>$$</li><br>
+    <li>$$</li><br>
+    <li>$$</li><br>
+    <li>$$</li><br>
+    <li>$$</li><br>
+    <li>$$</li><br>
+    <li>$$</li><br>
+    <li>$$</li><br> -->
+
+  </ol>
+
+    </div>
+
+
+    <div class="nota-box"><h1 class="number-title"> Ejercicio</h1>
+    <p>Simplifique cada una de las siguientes expresiones algebraicas:</p>
+    <ol class="two-column">
+      <li>$3x-8x$</li><br>
+      <li>$6a^2+5b^2+7a^2$</li><br>
+      <li>$-3a + 5a - 10a$</li><br>
+      <li>$4x -3x -2x$</li><br>
+      <li>$7ab + 4ab - 3ab$</li><br>
+      <li>$5a^2 - 7a^2 + 3a^2 - 2a^2$</li><br>
+      <li>$-m + n +m +n$</li><br>
+      <li>$\displaystyle{\frac{1}{4} a^3b} - \frac{3}{5} a^3b + \frac{1}{6}a^3b$</li><br>
+      <li>$0.25 x -0.4 x + 0.2 x$</li><br>
+      <li>$\displaystyle{\frac{1}{2} ab^3c} - \frac{3}{2} ab^3c - ab^3c$</li><br>
+      <li>$8x- 3y -9x+5y-2x+y$</li><br>
+      <li>$10a - 7b + 4a + 5b - 14a + 3b$</li><br>
+      <li>$-12m + 3n -4m -10n +5m -n$</li><br>
+      <li>$12a^2b + 3ab^2 - 8 a^2b - 10ab^2 - 3a^2b + 6 ab^2$</li><br>
+      <li>$9a^3b^2c - 5a^2b^2 - 12 a^3b^2c + 3a^3b c^2 + 4a^3b^2c$</li><br>
+      <li>$10a - 7b + 4a+5b - 14a+3b$</li><br>
+      <li>$-6x^2+y^2-3x^2+2y^2$</li><br>
+      <li>$6a^2b + 7a^2b$</li><br>
+      <li>$-6xy^2 -xy^2 -3xy^2$</li><br>
+      <li>$4xy^4z^3 - 4 x y^4z^3$</li><br>
+      <li>$-2a^2 b  + 12a^2b$</li><br>
+      
+    </ol>
+    </div>
+
+
+
+    <div class="nota-box"><h1 class="number-title"> Ejercicio</h1>
+      <p>Simplifique cada una de las siguientes expresiones algebraicas:</p>
+      <ol class="two-column">
+        <li>$ 7(2a - 4b) - 3(4a - 2b)$</li><br>
+        <li>$6a^2+5b^2+7a^2$</li><br>
+        <li>$-3a + 5a - 10a$</li><br>
+        <li>$4x -3x -2x$</li><br>
+        <li>$7ab + 4ab - 3ab$</li><br>
+        <li>$5a^2 - 7a^2 + 3a^2 - 2a^2$</li><br>
+        <li>$-m + n +m +n$</li><br>
+        <li>$\displaystyle{\frac{1}{4} a^3b} - \frac{3}{5} a^3b + \frac{1}{6}a^3b$</li><br>
+        <li>$0.25 x -0.4 x + 0.2 x$</li><br>
+        <li>$\displaystyle{\frac{1}{2} ab^3c} - \frac{3}{2} ab^3c - ab^3c$</li><br>
+        <li>$8x- 3y -9x+5y-2x+y$</li><br>
+        <li>$10a - 7b + 4a + 5b - 14a + 3b$</li><br>
+        <li>$-12m + 3n -4m -10n +5m -n$</li><br>
+        <li>$12a^2b + 3ab^2 - 8 a^2b - 10ab^2 - 3a^2b + 6 ab^2$</li><br>
+        <li>$9a^3b^2c - 5a^2b^2 - 12 a^3b^2c + 3a^3b c^2 + 4a^3b^2c$</li><br>
+        <li>$10a - 7b + 4a+5b - 14a+3b$</li><br>
+        <li>$-6x^2+y^2-3x^2+2y^2$</li><br>
+        <li>$6a^2b + 7a^2b$</li><br>
+        <li>$-6xy^2 -xy^2 -3xy^2$</li><br>
+        <li>$4xy^4z^3 - 4 x y^4z^3$</li><br>
+        <li>$-2a^2 b  + 12a^2b$</li><br>
+        
+      </ol>
+      </div>
 </body>
