--- a/Notas.html
+++ b/Notas.html
@@ -61,6 +61,12 @@
     <body class="fondo-body" ><h1 class="page-title"> Notas </h1>  
       
       <!-- <div class="nota-box"> -->
+
+        <div style="text-align: center;">
+          <iframe src="./Archivos/NotasCD.pdf" width="95%" height="100% allowfullscreen">
+  
+          </iframe>
+        </div>
         <div style="text-align: center;">
         <iframe src="./Archivos/Notas.pdf" width="95%" height="100% allowfullscreen">
 
