--- a/Notas.html
+++ b/Notas.html
@@ -63,7 +63,7 @@
       <!-- <div class="nota-box"> -->
 
         <div style="text-align: center;">
-          <iframe src="./Archivos/NotasCD.pdf" width="95%" height="100% allowfullscreen">
+          <iframe src="./Archivos/Notas2.pdf" width="95%" height="100% allowfullscreen">
   
           </iframe>
 
