--- a/Notas.html
+++ b/Notas.html
@@ -71,7 +71,7 @@
           <br><br><br><br><br><br><br><br><br>
         </div>
         <div style="text-align: center;">
-        <iframe src="./Archivos/Notas.pdf" width="95%" height="100% allowfullscreen">
+        <iframe src="./Archivos/Notas1.pdf" width="95%" height="100% allowfullscreen">
 
         </iframe>
       </div>
