--- a/Notas.html
+++ b/Notas.html
@@ -44,7 +44,7 @@
   
     <!-- CSS -->
  
-    <link rel="stylesheet" , href="style.css" />
+    <link rel="stylesheet" , href="./style.css" />
     <!-- Top Menu  -->
     
 
