--- a/Ejercicios.html
+++ b/Ejercicios.html
@@ -87,6 +87,7 @@
       <div class="links-box" style = "font-family: 'Oldenburg', cursive;">
           
        <a  href="https://pablojhh.github.io/MatematicasDOS/Ejercicios/EP1.html"> Propiedades de los números reales</a>
+       <a  href="https://pablojhh.github.io/MatematicasDOS/Ejercicios/EPDerivadas.html"> Derivadas de funciones. Reglas de diferenciacion</a>
        <!-- <a  href="https://pjhh-ciencias.github.io/CPMatematicas/Ejercicios/EP2.html"> Ejercicios propuestos de Álgebra</a>
        <a  href="https://pjhh-ciencias.github.io/CPMatematicas/Ejercicios/EP3.html"> Ejercicios propuestos</a> -->
        
